sumo/tests/sumo/extended/emitter/errors/xml/testsuite.sumo
# The end of an element is missing (routedistelem)
missing_element_end1

# The end of an element is missing (vtypedistelem)
missing_element_end2

# The end of an element is missing (emit)
missing_element_end3


# The begin element is not given 
no_begin

# The end element is not given 
no_end


# An attribute occures twice
double_attribute

